ingress/ingress-by-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 80
  ingressClassName: nginx
  rules:
  - host: "foo.p0ssuidao.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foo-nginx
            port:
              number: 80


---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: foo-nginx
  name: foo-nginx
spec:
  containers:
  - image: nginx
    name: foo-nginx

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: foo-nginx
  name: foo-nginx
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: foo-nginx
  type: ClusterIP

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: default-backend
  name: default-backend
spec:
  containers:
  - image: nginx
    name: default-backend

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: default-backend
  name: default-backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: default-backend
  type: ClusterIP
